@@ -1,50 +1,46 @@
 package donggukthon.volunmate.service;
 
 import donggukthon.volunmate.domain.*;
-import donggukthon.volunmate.dto.CreateVolunteerDto;
-import donggukthon.volunmate.dto.RequestVolunteerSignDto;
-import donggukthon.volunmate.dto.ResponseVolunteerDetailDto;
-import donggukthon.volunmate.dto.ResponseVolunteerDto;
+import donggukthon.volunmate.dto.volunteer.request.CreateVolunteerDto;
+import donggukthon.volunmate.dto.volunteer.request.VolunteerSignDto;
+import donggukthon.volunmate.dto.volunteer.response.VolunteerDetailDto;
+import donggukthon.volunmate.dto.volunteer.response.VolunteerDto;
+import donggukthon.volunmate.dto.volunteer.response.VolunteerListDto;
 import donggukthon.volunmate.exception.CustomException;
 import donggukthon.volunmate.exception.ErrorCode;
 import donggukthon.volunmate.repository.*;
 import donggukthon.volunmate.type.EStatusType;
 import donggukthon.volunmate.utils.S3Util;
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.io.File;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
-@Slf4j
 public class VolunteerService {
     private final VolunteerRepository volunteerRepository;
-
     private final VolunmateRepository volunmateRepository;
     private final UserRepository userRepository;
     private final TagRepository tagRepository;
-
     private final HeartRepository heartRepository;
-
     private final S3Util s3Util;
 
-    public Boolean createVolunteer(String socialId, CreateVolunteerDto createVolunteerDto, File imageFile){
+    public Boolean createVolunteer(String socialId, CreateVolunteerDto createVolunteerDto, MultipartFile imageFile){
 
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
 
         List<Tag> tagList = new ArrayList<>();
 
-        String imageUrl = null; // image logic 추가해야함.
+        String imageUrl = s3Util.upload(imageFile);
+
         Volunteer volunteer = Volunteer.builder()
                 .title(createVolunteerDto.title())
                 .imageUrl(imageUrl)
@@ -59,10 +55,7 @@ public class VolunteerService {
                 .user(user)
                 .build();
 
-
-
-        for (String tag:createVolunteerDto.tag()
-             ) {
+        for (String tag:createVolunteerDto.tag()) {
             tagList.add(Tag.builder()
                             .content(tag)
                             .volunteer(volunteer)
@@ -74,14 +67,14 @@ public class VolunteerService {
         return Boolean.TRUE;
     }
 
-    public Boolean volunteerSignUp(String socialId, Long team_id, RequestVolunteerSignDto requestVolunteerSignDto){
+    public Boolean volunteerSignUp(String socialId, Long teamId, VolunteerSignDto requestVolunteerSignDto){
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
-        Volunteer volunteer = volunteerRepository.findById(team_id)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
+        Volunteer volunteer = volunteerRepository.findById(teamId)
+                .orElseThrow(() -> new CustomException(ErrorCode.VOLUNTEER_NOT_FOUND));
 
         if(user == volunteer.getUser()){
-            throw new CustomException(ErrorCode.BAD_REQUEST_ERROR);
+            throw new CustomException(ErrorCode.CANNOT_SIGNUP_MY_VOLUNTEER);
         }
 
         volunmateRepository.save(
@@ -94,15 +87,14 @@ public class VolunteerService {
                         .user(user)
                         .build()
         );
-
         return Boolean.TRUE;
     }
 
-    public Boolean volunteerHeart(String socialId, Long team_id){
+    public Boolean volunteerHeart(String socialId, Long teamId){
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
-        Volunteer volunteer = volunteerRepository.findById(team_id)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
+        Volunteer volunteer = volunteerRepository.findById(teamId)
+                .orElseThrow(() -> new CustomException(ErrorCode.VOLUNTEER_NOT_FOUND));
 
         heartRepository.save(
                 Heart.builder()
@@ -114,66 +106,59 @@ public class VolunteerService {
         return Boolean.TRUE;
     }
 
-    public ResponseVolunteerDetailDto getVolunteerDetail(Long team_id){
-        Volunteer volunteer = volunteerRepository.findById(team_id)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+    public VolunteerDetailDto getVolunteerDetail(Long teamId){
+        Volunteer volunteer = volunteerRepository.findById(teamId)
+                .orElseThrow(() -> new CustomException(ErrorCode.VOLUNTEER_NOT_FOUND));
 
         List<String> tagStrings = new ArrayList<>();
 
-        for (Tag t: volunteer.getTags()
-             ) {
+        for (Tag t: volunteer.getTags()) {
             tagStrings.add(t.getContent());
         }
 
-        return ResponseVolunteerDetailDto.of(volunteer.getTitle(),
-                volunteer.getContent(),
-                tagStrings,
-                volunteer.getStartDate(),
-                volunteer.getEndDate(),
-                volunteer.getDueDate(),
-                volunteer.getVolunCounet(),
-                volunteer.getLatitude(),
-                volunteer.getLongitude(),
-                volunteer.getUser().getUserName(),
-                volunteer.getUser().getDegree(),
-                volunteer.getCreatedAt());
+        return VolunteerDetailDto.of(volunteer.getTitle(),
+                volunteer.getContent(), tagStrings,
+                volunteer.getStartDate().toString(), volunteer.getEndDate().toString(),
+                volunteer.getDueDate().toString(), volunteer.getLatitude(), volunteer.getLongitude(),
+                volunteer.getUser().getUserName(), volunteer.getUser().getDegree(),
+                volunteer.getCreatedAt().toString(),
+                volunteer.getVolunCount(), volunteer.getCurCount(),
+                volunteer.getImageUrl()
+                );
     }
 
-    public List<ResponseVolunteerDto> getVolunteerList(String socialId){
+    public VolunteerListDto getVolunteerList(String socialId){
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
-
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
         List<Volunteer> volunteerList = volunteerRepository.getVolunteers(user.getLatitude(), user.getLongitude(),
                                                                             LocalDateTime.now());
-
-        List<ResponseVolunteerDto> responseVolunteerDtoList = volunteerList.stream()
-                .map(volunteer ->
-                        new ResponseVolunteerDto(
+        List<VolunteerDto> volunteerDtos = volunteerList.stream()
+                .map(volunteer -> VolunteerDto.of(
                         volunteer.getId(),
                         volunteer.getTitle(),
-                        volunteer.getStartDate(),
-                        volunteer.getEndDate(),
-                        volunteer.getDueDate(),
-                                volunteer.getTags().stream()
-                                        .map(Tag::getContent)
-                                        .collect(Collectors.toList()),
-                        volunteer.getVolunCounet(),
+                        volunteer.getTags().stream()
+                                .map(Tag::getContent)
+                                .collect(Collectors.toList()),
+                        volunteer.getStartDate().toString(),
+                        volunteer.getEndDate().toString(),
+                        volunteer.getDueDate().toString(),
+                        volunteer.getVolunCount(),
                         volunteer.getCurCount(),
                         volunteer.getLatitude(),
                         volunteer.getLongitude(),
-                        volunteer.getCreatedAt(),
-                        volunteer.getHearts().stream().map(Heart::getUser).anyMatch(u->u.equals(user))
-                ))
-                .collect(Collectors.toList());
+                        volunteer.getCreatedAt().toString(),
+                        volunteer.getImageUrl(),
+                        volunteer.getHearts().stream()
+                                .anyMatch(heart -> heart.getUser() == user)
+                )).toList();
 
-
-        return responseVolunteerDtoList;
+        return VolunteerListDto.of(volunteerDtos);
     }
     public Boolean volunteerDelete(String socialId, Long team_id){
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
         Volunteer volunteer = volunteerRepository.findById(team_id)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.VOLUNTEER_NOT_FOUND));
 
         if(user != volunteer.getUser()){
             throw new CustomException(ErrorCode.BAD_REQUEST_ERROR);
@@ -185,16 +170,17 @@ public class VolunteerService {
     }
 
     public Boolean volunteerUpdate(String socialId, CreateVolunteerDto createVolunteerDto,
-                                   File imageFile,Long team_id){
+                                   MultipartFile imageFile, Long team_id){
         User user = userRepository.findBySocialIdAndIsLogin(socialId, true)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_USER));
         Volunteer volunteer = volunteerRepository.findById(team_id)
-                .orElseThrow(() -> new CustomException(ErrorCode.NOT_FOUND_ERROR));
+                .orElseThrow(() -> new CustomException(ErrorCode.VOLUNTEER_NOT_FOUND));
 
         if(user != volunteer.getUser()){
             throw new CustomException(ErrorCode.BAD_REQUEST_ERROR);
         }
-        String imageUrl = null; //image logic 추가필요.
+
+        String imageUrl = s3Util.updateImage(imageFile, volunteer.getImageUrl());
 
         volunteer.update(createVolunteerDto.title(),createVolunteerDto.content(),imageUrl,
                 createVolunteerDto.latitude(), createVolunteerDto.longitude(),
